--- a/themes/distinctionpp/layouts/_default/_markup/render-codeblock.html
+++ b/themes/distinctionpp/layouts/_default/_markup/render-codeblock.html
@@ -1,5 +1,6 @@
 {{- /* Default code block render hook: outputs standard <pre><code> for highlight.js processing */ -}}
 {{- /* Specific languages (mermaid, excalidraw, drawio, chart, chartjs) have their own render hooks */ -}}
+{{- /* .Inner is already HTML-escaped by Hugo, so use safeHTML to prevent double-escaping */ -}}
 <pre><code class="language-{{ .Type }}">
-{{- .Inner | htmlEscape -}}
+{{- .Inner | safeHTML -}}
 </code></pre>
